Sutter Health/src/objects/Document_Generation_Request__c.object
<CustomObject>
    <fields>
        <fullName>Account_Executive__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Executive</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Document_Generation_Requests2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account_ID_HCC__c</fullName>
        <formula>LPAD( Account__r.SHP_Group_ID__c , 6 , &apos;0&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account_ID_HCC</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_IsRenewal__c</fullName>
        <formula>IF( Renewal_Existing__c = &apos;Renewal&apos; , TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account_IsRenewal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Account_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Document_Generation_Requests1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account_Stage__c</fullName>
        <formula>IF( Sold_Sign_Off__c == NULL, &apos;Opportunity&apos;, &apos;SSO&apos;)</formula>
        <label>Account Stage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_TIN_Type__c</fullName>
        <formula>TEXT(Account__r.Account_TIN_Type__c)</formula>
        <label>Account TIN Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_TIN__c</fullName>
        <formula>Account__r.Tax_ID__c</formula>
        <label>Account TIN</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Type__c</fullName>
        <label>Account Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Document Generation Requests</relationshipLabel>
        <relationshipName>Document_Generation_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Active_Members__c</fullName>
        <formula>Account__r.SHP_Active_Members__c</formula>
        <label>Active Members</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BPA_Team_Comments__c</fullName>
        <label>BPA Team Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Broker__c</fullName>
        <formula>Account__r.Broker__r.Name</formula>
        <label>Broker</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Calendar_Year_Plan_Year__c</fullName>
        <formula>Text(Opportunity__r.Calendar_or_Plan_Year__c )</formula>
        <label>Calendar Year/Plan Year</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DBA__c</fullName>
        <formula>IF(Account__r.DBA__c != NULL &amp;&amp; Account__r.DBA__c != &apos;&apos;,Account__r.DBA__c,&apos;N/A&apos;)</formula>
        <label>DBA</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Documents_Folder_New__c</fullName>
        <inlineHelpText>Link to the folder in Share point where Documents that are generated are stored</inlineHelpText>
        <label>Documents Folder</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Documents_Folder__c</fullName>
        <inlineHelpText>Link to the folder in Share point where Documents that are generated are stored</inlineHelpText>
        <label>Documents Folder</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Employer_First_Renewal_Date__c</fullName>
        <formula>Account__r.Employer_First_Renewal_Date__c</formula>
        <label>Employer First Renewal Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Employer_Type_Email__c</fullName>
        <formula>IF(TEXT(Account__r.Employer_Type__c) != NULL &amp;&amp; TEXT(Account__r.Employer_Type__c) != &apos;&apos;,TEXT(Account__r.Employer_Type__c),&apos;N/A&apos;)</formula>
        <label>Employer Type Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employer_Type__c</fullName>
        <formula>Text(Account__r.Employer_Type__c)</formula>
        <label>Employer Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Expedite__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Expedite Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Mailing_Address__c</fullName>
        <formula>IF(ISNULL(Account__r.ShippingAddress), NULL, Account__r.ShippingStreet  &amp; BR() &amp; Account__r.ShippingCity&amp;&quot;, &quot;&amp;Account__r.ShippingState&amp;&quot; &quot;&amp;Account__r.ShippingPostalCode&amp; BR() &amp; Account__r.Mailing_County__c&amp;&quot;, &quot;&amp;Account__r.ShippingCountry)</formula>
        <label>Mailing Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Document Generation Requests</relationshipLabel>
        <relationshipName>Document_Generation_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Opportunity_stage__c</fullName>
        <formula>TEXT(Opportunity__r.StageName)</formula>
        <label>Opportunity stage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Physical_Address__c</fullName>
        <formula>IF(ISNULL(Account__r.BillingAddress ), NULL, Account__r.BillingStreet&amp; BR() &amp; Account__r.BillingCity&amp;&quot;, &quot;&amp;Account__r.BillingState&amp;&quot; &quot;&amp;Account__r.BillingPostalCode&amp; BR() &amp; Account__r.Physical_County__c&amp;&quot;, &quot;&amp;Account__r.BillingCountry)</formula>
        <label>Physical Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Plan_Duration__c</fullName>
        <formula>IF( 
(Plan_End_Date__c  - Plan_Effective_Date__c) / 365 * 12 &lt; 1, 1, ROUND((Plan_End_Date__c  - Plan_Effective_Date__c) / 365 * 12,1)
)</formula>
        <label>Plan Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Plan_Effective_Date__c</fullName>
        <formula>Opportunity__r.Plan_Effective_Date__c</formula>
        <label>Plan Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Plan_End_Date__c</fullName>
        <formula>Opportunity__r.Plan_end_date__c</formula>
        <label>Plan End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Plans__c</fullName>
        <label>Plans</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Reason__c</fullName>
        <label>Reason</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Status__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Template is not available</fullName>
                </value>
                <value>
                    <fullName>Regulatory reason</fullName>
                </value>
                <value>
                    <fullName>Compliance reason</fullName>
                </value>
                <value>
                    <fullName>Plan no longer available</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Related_Object_Id__c</fullName>
        <label>Related Object Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Renewal_Existing__c</fullName>
        <formula>IF(Opportunity__r.Renewed_Opportunity__c == true, &apos;Renewal&apos;,&apos;Existing&apos;)</formula>
        <label>Renewal/Existing</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Request_Approved_Date__c</fullName>
        <label>Request Approved Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Request_Created_Date__c</fullName>
        <formula>CreatedDate</formula>
        <label>Request Created Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Request_Due_Date__c</fullName>
        <label>Request Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Request_IsFinal__c</fullName>
        <formula>IF( Request_Status__c = &apos;Approved&apos;, TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Request_IsFinal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Request_Status__c</fullName>
        <defaultValue>&quot;Draft&quot;</defaultValue>
        <label>Request Status</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Requested_Expedition__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Expedite Request</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Requestor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Requestor</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Document_Generation_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SFDC_Account_Number__c</fullName>
        <formula>Account__r.SFDC_Auto_Number__c</formula>
        <label>Account Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SLA_met_not_met__c</fullName>
        <formula>IF(ISNULL(Request_Approved_Date__c) = FALSE  &amp;&amp; Request_Due_Date__c &gt; Request_Approved_Date__c,  IMAGE(&apos;/resource/Green_flag&apos;, &apos;Green&apos;,30,30),
	IF(ISNULL(Request_Approved_Date__c) = FALSE &amp;&amp; Request_Due_Date__c &lt;  Request_Approved_Date__c, IMAGE(&apos;/resource/Red_Flag&apos;, &apos;Red&apos;,30,30), 
		IF(ISNULL(Request_Approved_Date__c) = FALSE  &amp;&amp; Request_Due_Date__c = Request_Approved_Date__c, IMAGE(&apos;/resource/Green_flag&apos;, &apos;Green&apos;,30,30),
			IF(ISNULL(Request_Approved_Date__c) = TRUE &amp;&amp; Request_Due_Date__c &gt;  TODAY(), IMAGE(&apos;/resource/Yellow_Flag&apos;, &apos;Yellow&apos;,30,30), 
				IF(ISNULL(Request_Approved_Date__c) = TRUE &amp;&amp; Request_Due_Date__c &lt;  TODAY(), IMAGE(&apos;/resource/Red_Flag&apos;, &apos;Red&apos;,30,30),
					IF(ISNULL(Request_Approved_Date__c) = TRUE &amp;&amp; Request_Due_Date__c =  TODAY(), IMAGE(&apos;/resource/Yellow_Flag&apos;, &apos;Yellow&apos;,30,30),&apos;&apos;
					)
				)
			) 
		)
	)
)</formula>
        <label>SLA met/not met</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SLA_met_or_not_met__c</fullName>
        <formula>IF( Request_Approved_Date__c  &gt;  Request_Due_Date__c , &apos;SLA not met&apos;, &apos;SLA met&apos;)</formula>
        <label>SLA met or not met</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Comments__c</fullName>
        <label>Sales Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Sold_Sign_Off__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sold Sign Off</label>
        <referenceTo>Sold_Sign_Off__c</referenceTo>
        <relationshipLabel>Document Generation Requests</relationshipLabel>
        <relationshipName>Document_Generation_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status_Before_Cancellation__c</fullName>
        <label>Status Before Cancellation</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>On Hold</fullName>
                </value>
                <value>
                    <fullName>Documents Generated</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                    <isActive>false</isActive>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tech_Account_RecordType_Name__c</fullName>
        <formula>Account__r.RecordType.Name</formula>
        <label>Tech Account RecordType Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Translation_services__c</fullName>
        <label>Translation services</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Spanish</fullName>
                </value>
                <value>
                    <fullName>Chinese</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type_of_Business__c</fullName>
        <formula>Text(Opportunity__r.Type)</formula>
        <label>Type of Business</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>has_Custom_Plans__c</fullName>
        <defaultValue>false</defaultValue>
        <label>has Custom Plans?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>of_Documents_Requested__c</fullName>
        <label># of Documents Requested</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_Documents_generated__c</fullName>
        <label># of Documents generated</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Document Generation Request</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Requestor__c</columns>
        <columns>Employer_Type__c</columns>
        <columns>Type_of_Business__c</columns>
        <columns>Request_Status__c</columns>
        <columns>Request_Due_Date__c</columns>
        <columns>SLA_met_not_met__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Benefit_Plan_Admin_Queue_Document_Generation_Request</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Employer_Type__c</columns>
        <columns>Type_of_Business__c</columns>
        <columns>Requestor__c</columns>
        <columns>Request_Due_Date__c</columns>
        <columns>Status__c</columns>
        <columns>Request_Status__c</columns>
        <columns>of_Documents_Requested__c</columns>
        <columns>of_Documents_generated__c</columns>
        <filterScope>Queue</filterScope>
        <label>Doc.Gen.Requests Queue</label>
        <queue>Benefit_Plan_Admin_Queue</queue>
        <sharedTo>
            <group>SHP_BPA_Group</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Canceled_Doc_Gen_Requests_Queue_Document_Generation_Request</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Employer_Type__c</columns>
        <columns>Type_of_Business__c</columns>
        <columns>Requestor__c</columns>
        <columns>Request_Due_Date__c</columns>
        <columns>Status__c</columns>
        <columns>Request_Status__c</columns>
        <columns>of_Documents_Requested__c</columns>
        <columns>of_Documents_generated__c</columns>
        <filterScope>Queue</filterScope>
        <label>Canceled Doc. Gen. Requests Queue</label>
        <queue>Canceled_Doc_Gen_Requests_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Custom_Benefit_Plan_QA_Queue_Document_Generation_Request</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Employer_Type__c</columns>
        <columns>Type_of_Business__c</columns>
        <columns>Requestor__c</columns>
        <columns>Request_Due_Date__c</columns>
        <columns>Status__c</columns>
        <columns>Request_Status__c</columns>
        <columns>of_Documents_generated__c</columns>
        <columns>of_Documents_Requested__c</columns>
        <filterScope>Queue</filterScope>
        <label>Doc.Gen.Requests QA Queue</label>
        <queue>Custom_Benefit_Plan_QA_Queue</queue>
        <sharedTo>
            <group>SHP_BPA_QA_Group</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>My_Queue</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Employer_Type__c</columns>
        <columns>Type_of_Business__c</columns>
        <columns>Requestor__c</columns>
        <columns>Request_Due_Date__c</columns>
        <columns>Status__c</columns>
        <columns>Request_Status__c</columns>
        <columns>of_Documents_Requested__c</columns>
        <columns>of_Documents_generated__c</columns>
        <filterScope>Mine</filterScope>
        <label>My Queue</label>
    </listViews>
    <listViews>
        <fullName>My_Team_Closed_Items</fullName>
        <columns>NAME</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>Request_Status__c</columns>
        <columns>Status__c</columns>
        <columns>Request_Created_Date__c</columns>
        <columns>Request_Due_Date__c</columns>
        <columns>Requestor__c</columns>
        <columns>SLA_met_not_met__c</columns>
        <columns>Expedite__c</columns>
        <columns>Employer_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Request_Status__c</field>
            <operation>equals</operation>
            <value>Approved</value>
        </filters>
        <label>My Team Closed Items</label>
        <sharedTo>
            <role>BPA_Supervisor</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>My_Team_Open_Items</fullName>
        <columns>NAME</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>Request_Status__c</columns>
        <columns>Status__c</columns>
        <columns>Request_Created_Date__c</columns>
        <columns>Request_Due_Date__c</columns>
        <columns>Requestor__c</columns>
        <columns>SLA_met_not_met__c</columns>
        <columns>Expedite__c</columns>
        <columns>Employer_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Request_Status__c</field>
            <operation>notEqual</operation>
            <value>Approved</value>
        </filters>
        <filters>
            <field>Request_Status__c</field>
            <operation>notContain</operation>
            <value>Cancel</value>
        </filters>
        <filters>
            <field>OWNER.ALIAS</field>
            <operation>notContain</operation>
            <value>Benefit Plan Admin Queue</value>
        </filters>
        <filters>
            <field>OWNER.ALIAS</field>
            <operation>notContain</operation>
            <value>SHP Sales</value>
        </filters>
        <label>My Team Open Items</label>
        <sharedTo>
            <role>BPA_Supervisor</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>SHP_BPA_Approvers_Queue_Document_Generation_Request</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Employer_Type__c</columns>
        <columns>Type_of_Business__c</columns>
        <columns>Requestor__c</columns>
        <columns>Request_Due_Date__c</columns>
        <columns>Status__c</columns>
        <columns>Request_Status__c</columns>
        <columns>of_Documents_Requested__c</columns>
        <columns>of_Documents_generated__c</columns>
        <filterScope>Queue</filterScope>
        <label>SHP BPA Approvers Queue</label>
        <queue>SHP_BPA_Approvers_Queue</queue>
        <sharedTo>
            <group>SHP_BPA_Approvers_Group</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>SHP_Custom_Plan_Executive_Queue_Document_Generation_Request</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Employer_Type__c</columns>
        <columns>Type_of_Business__c</columns>
        <columns>Requestor__c</columns>
        <columns>Request_Due_Date__c</columns>
        <columns>Status__c</columns>
        <columns>Request_Status__c</columns>
        <columns>of_Documents_Requested__c</columns>
        <columns>of_Documents_generated__c</columns>
        <filterScope>Queue</filterScope>
        <label>SHP Sales Executive Queue</label>
        <queue>SHP_Custom_Plan_Executive_Queue</queue>
        <sharedTo>
            <group>SHP_Executive_Group</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>SHP_Sales_Queue_Document_Generation_Request</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Employer_Type__c</columns>
        <columns>Type_of_Business__c</columns>
        <columns>Requestor__c</columns>
        <columns>Request_Due_Date__c</columns>
        <columns>Status__c</columns>
        <columns>Request_Status__c</columns>
        <columns>of_Documents_Requested__c</columns>
        <columns>of_Documents_generated__c</columns>
        <filterScope>Queue</filterScope>
        <label>SHP Sales Queue</label>
        <queue>SHP_Sales_Queue</queue>
        <sharedTo>
            <group>SHP_Sales</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Sales_Approved_Doc_Gen_Requests</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Employer_Type__c</columns>
        <columns>Type_of_Business__c</columns>
        <columns>Requestor__c</columns>
        <columns>Request_Due_Date__c</columns>
        <columns>Status__c</columns>
        <columns>Request_Status__c</columns>
        <columns>of_Documents_Requested__c</columns>
        <columns>of_Documents_generated__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Request_Status__c</field>
            <operation>equals</operation>
            <value>Approved by Sales</value>
        </filters>
        <label>Sales Approved Doc.Gen.Requests</label>
    </listViews>
    <nameField>
        <displayFormat>REQ-{00000}</displayFormat>
        <label>Document Generation Request Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Document Generation Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Owner_Not_in_Queue</fullName>
        <active>true</active>
        <description>Restrict user not to edit record if the record is not accepted by him from the queue</description>
        <errorConditionFormula>AND( 
NOT(AND(	
Owner:Queue.QueueName = &apos;SHP BPA Doc.Gen.Queue&apos;, 
$Profile.Name = &apos;SHP Sales&apos; 
) 
), 
NOT( $UserRole.Name = &apos;SHP BPA Supervisor&apos;), 
PRIORVALUE(OwnerId )  &lt;&gt;  $User.Id, 
ISNEW(), 
IF(Sold_Sign_Off__c &lt;&gt; NULL, Sold_Sign_Off__r.regenerate__c &lt;&gt; True , Opportunity__r.regenerate__c &lt;&gt; True) 
)</errorConditionFormula>
        <errorMessage>Only owner of the record can modify document generation request. If owner of the record is a queue, then please accept record from queue and try again</errorMessage>
    </validationRules>
</CustomObject>